jupyterhub/overlays/prod/jupyterhub-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jupyterhub-ingress
  namespace: jupyterhub
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  defaultBackend:
    service:
      name: jupyterhub-node
      port:
        number: 8443
  tls:
    - hosts:
        - jupyterhub.drive.sunet.se 
      secretName: tls-secret
  
  rules:
  - host: jupyterhub.drive.sunet.se
    http:
      paths:
      - path: /
        pathType: Prefix
        backend: 
          service:
            name: jupyterhub-node
            port:
              number: 8080
